Changing service_id to context
