# Assignment 1/messageservice/resources/message.py
@@ -12,7 +12,7 @@ class Message:
     @staticmethod
     def create(body):
         session = Session()
-        message = MessageDAO(body['receiver_id'], body['sender_id'], body['service_id'], datetime.now(),
+        message = MessageDAO(body['receiver_id'], body['sender_id'], body['context'], datetime.now(),
                                datetime.strptime(body['received_time'], '%Y-%m-%d %H:%M:%S.%f'),
                                StatusDAO(STATUS_CREATED, datetime.now()))
         session.add(message)
@@ -33,7 +33,7 @@ class Message:
             text_out = {
                 "receiver_id:": message.receiver_id,
                 "sender_id": message.sender_id,
-                "service_id": message.service_id,
+                "context": message.context,
                 "send_time": message.send_time.isoformat(),
                 "received_time": message.received_time.isoformat(),
                 "status": {
